@@ -1,3 +1,10 @@
+2005-08-05  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* pa.c (function_value): Handle small aggregates on 32-bit targets.
+	(function_arg): Pass small aggregates in general registers on 32-bit
+	targets.
+	* som.h (MEMBER_TYPE_FORCES_BLK): Delete define.
+
 2005-08-04  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* doc/install.texi (Specific): Adjust link to openavr.org.
